# M.I.K.E.Y

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/cli/: main.py
core/: config.py  executor_client.py
core/backup/: store.py
core/context/: assembly.py
core/eval/: reasoning.py  retrieval.py
core/events/: schema.py  store.py
core/gateway/: app.py
core/ingest/: files.py
core/memory/: consolidation.py  provenance.py  store.py
core/missions/: runner.py  store.py
core/models/: anthropic_adapter.py  embeddings.py  fake_adapter.py  gateway.py  groq_adapter.py  ollama_adapter.py
core/orchestrator/: brains.py  critic.py  loop.py  planner.py  tiering.py  tools.py
core/policy/: engine.py
core/storage/: db.py
core/trace/: store.py
docs/: 00-vision.md  01-architecture-review.md  02-system-architecture.md  03-roadmap.md  04-intelligence-sovereignty.md
docs/adr/: ADR-001-gen1-tech-stack.md
evals/: baseline.json  golden_set.json  reasoning_golden.json
executor/: main.py  tools.py
tests/: conftest.py  test_anthropic_adapter.py  test_backup.py  test_consolidation.py  test_critic.py  test_embeddings.py  test_eval.py  test_event_store.py  test_executor_tools.py  test_exporter.py  test_gateway_fallback.py  test_gateway_routes.py  test_gateway_tier.py  test_groq_adapter.py  test_ingest.py  test_memory.py  test_missions.py  test_ollama_adapter.py  test_orchestrator.py  test_planner.py  test_policy.py  test_provenance.py  test_reasoning_eval.py  test_router.py  test_tiering.py
training/: __init__.py  exporter.py
